# mcu-heartbeat-monitor

./: .gitignore  CMakeLists.txt  HeartbeatMonitor.qml  HeartbeatMonitor.qmlproject  HeartbeatMonitor.qmlproject.qtds  Screen01.ui.qml  hardwareinterface.cpp  hardwareinterface.h
MCUDefaultStyle/: Button.qml  CheckBox.qml  RadioButton.qml  Slider.qml  Switch.qml
imports/Constants/: Constants.qml
